--- a/templates/register.html
+++ b/templates/register.html
@@ -30,22 +30,40 @@
                         <div class="account-logo">
                             <a href="{% url 'homepage' %}"><img src="{% static '/img/logo2.png'%}" alt="employee"></a>
                         </div>
-                        <form>
+                        
+                        <form method="post">
+                            {% csrf_token %}
+                            
+                             {% include 'messages.html'%}
+                             
+                                <div class="form-group">
+                                    <label>Register As : </label>
+                                    <select class="select" name="user_type" required>
+                                        <option>Select Account</option>
+                                        <option value="Hr"  >Hr</option>
+                                        <option value="Employee">Employee</option>
+                                        
+                                    </select>
+                                </div>
                             <div class="form-group form-focus">
-                                <label class="control-label">Username</label>
-                                <input class="form-control floating" type="text">
+                                <label class="control-label">Phone Number</label>
+                                <input class="form-control floating" type="text" placeholder="0756XXXXX" name="phone" required>
                             </div>
                             <div class="form-group form-focus">
-                                <label class="control-label">Email</label>
-                                <input class="form-control floating" type="text">
+                                <label class="control-label">Username</label>
+                                <input class="form-control floating" type="text" name="username" required>
+                            </div>
+                            <div class="form-group form-focus">
+                                <label class="control-label">Email Address</label>
+                                <input class="form-control floating" type="text" name="email" required>
                             </div>
                             <div class="form-group form-focus">
                                 <label class="control-label">Password</label>
-                                <input class="form-control floating" type="password">
+                                <input class="form-control floating" type="password" name="password1" required>
                             </div>
                             <div class="form-group form-focus">
-                                <label class="control-label">Repeat Password</label>
-                                <input class="form-control floating" type="password">
+                                <label class="control-label">Confirm Password</label>
+                                <input class="form-control floating" type="password" name="password2" required>
                             </div>
                             <div class="form-group text-center">
                                 <button class="btn btn-primary btn-block account-btn" type="submit">Register</button>
