--- a/templates/base.html
+++ b/templates/base.html
@@ -44,10 +44,14 @@
                     <a href="javascript:;" id="open_msg_box" class="hasnotifications"><i class="fa fa-comment-o"></i> <span class="badge bg-primary pull-right">8</span></a>
                 </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle user-link" data-toggle="dropdown" title="Admin">
-                        <span class="user-img"><img class="img-circle" src="{% static '/img/user.jpg'%}" width="40" alt="Admin">
+                    <a href="#" class="dropdown-toggle user-link" data-toggle="dropdown" title="{{request.user.username}}">
+                        <span class="user-img"><img class="img-circle" src="{% static '/img/user-04.jpg'%}" width="40" alt="Hr">
 							<span class="status online"></span></span>
-                        <span>HR</span>
+                            {% if request.user.is_hr%}
+                        <span> HR</span>
+                        {% else %}
+                        <span> Employee </span>
+                        {% endif %}
                         <i class="caret"></i>
                     </a>
                     <ul class="dropdown-menu">
@@ -74,7 +78,12 @@
                 <div id="sidebar-menu" class="sidebar-menu">
                     <ul>
                         <li class="active">
-                            <a href="{% url 'homepage' %}"><i class="fa fa-dashboard"></i> HR Dashboard</a>
+                             {% if request.user.is_hr%}
+                        <a href="{% url 'homepage' %}"><i class="fa fa-dashboard"></i> HR Dashboard</a>
+                        {% else %}
+                        <a href="{% url 'homepage' %}"><i class="fa fa-dashboard"></i> Employee Dashboard</a>
+                        {% endif %}
+                            
                         </li>
                         
                         <li>
