--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 {% block content %}
 {% load static %}
 <body>
+    {% include 'messages.html' %}
         <div class="page-wrapper">
             <div class="content container-fluid">
                 <div class="row">
