--- a/templates/coming-soon.html
+++ b/templates/coming-soon.html
@@ -1,66 +1,47 @@
+
+{% load static %}
 <!DOCTYPE html>
 <html>
 
 <head>
-    <meta charset="utf-8">
+   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
-    <title>Preadmin - Bootstrap Admin Template</title>
+    <link rel="shortcut icon" type="image/x-icon" href="{% static '/img/favicon.png'%}">
+    <title>Hurrray!!</title>
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <!--[if lt IE 9]>
-		<script src="assets/js/html5shiv.min.js"></script>
-		<script src="assets/js/respond.min.js"></script>
-	<![endif]-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static '/css/font-awesome.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static '/css/fullcalendar.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/dataTables.bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static '/css/select2.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-datetimepicker.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static '/plugins/morris/morris.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static '/css/style.css' %}">
 </head>
+
 
 <body>
     <div class="main-wrapper coming-wrapper">
         <div class="table-cell">
             <div class="container">
+                {% include 'messages.html' %}
                 <div class="title-section">
-                    <h1 class="coming-title">Launching Soon</h1>
-                    <p class="sub-title">We’re working very hard on the new version of our site. Stay tuned!</p>
+                    <h1 class="coming-title">Account Creation Success</h1>
+                    <p class="sub-title">Welcome To Employee Overtime-Working Management System <br/>
+                        Your Account has been Createsd Successifully.</p>
                 </div>
-                <div class="countdown" id="countdown">
-                    <ul>
-                        <li class="timer">
-                            <span class="days">365</span>
-                            <p class="countdown-period">Days</p>
-                        </li>
-                        <li class="seperator">:</li>
-                        <li class="timer">
-                            <span class="hours">23</span>
-                            <p class="countdown-period">Hours</p>
-                        </li>
-                        <li class="seperator">:</li>
-                        <li class="timer">
-                            <span class="minutes">45</span>
-                            <p class="countdown-period">Minutes</p>
-                        </li>
-                        <li class="seperator">:</li>
-                        <li class="timer">
-                            <span class="seconds">12</span>
-                            <p class="countdown-period">Seconds</p>
-                        </li>
-                    </ul>
-                    <div class="clearfix"></div>
+                
+                   <h5 style="text-align:center; color:orangered">Pleace Check your email to Verify your Account first! Thank You.</h5>
+                    
                 </div>
-                <div class="newsletter">
-                    <h3>get notified about our launch</h3>
-                    <form>
-                        <input type="text" placeholder="Enter email address">
-                        <input class="submit-btn" type="submit" value="Notify Me">
-                    </form>
-                </div>
+                
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/js/app.js"></script>
+    <script type="text/javascript" src="{% static '/js/jquery-3.2.1.min.js' %}"></script>
+    <script type="text/javascript" src="{% static '/js/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static '/js/app.js' %}"></script>
 </body>
 
 </html>
