--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                 </a>
             </div>
             <div class="page-title-box pull-left">
-                <h3>Human Resource Admin</h3>
+                <h3>Employee Overtime Management</h3>
             </div>
             <a id="mobile_btn" class="mobile_btn pull-left" href="#sidebar"><i class="fa fa-bars" aria-hidden="true"></i></a>
             <ul class="nav navbar-nav navbar-right user-menu pull-right">
@@ -90,7 +90,7 @@
                             <a href="#"><i class="fa fa-cog" aria-hidden="true"></i> Settings</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-calendar" aria-hidden="true"></i> Calendar</a>
+                            <a href="{% url 'calendar' %}"><i class="fa fa-calendar" aria-hidden="true"></i> Calendar</a>
                         </li>
                         
                         <li class="submenu">
