--- a/templates/login.html
+++ b/templates/login.html
@@ -36,11 +36,11 @@
                             
                             <div class="form-group form-focus">
                                 <label class="control-label"> Email</label>
-                                <input class="form-control floating" type="text" name="email">
+                                <input class="form-control floating" type="text" name="email" required>
                             </div>
                             <div class="form-group form-focus">
                                 <label class="control-label">Password</label>
-                                <input class="form-control floating" type="password" name="password">
+                                <input class="form-control floating" type="password" name="password" required>
                             </div>
                             <div class="form-group text-center">
                                 <button class="btn btn-primary btn-block account-btn" type="submit">Login</button>
