--- a/templates/password/forgot-password.html
+++ b/templates/password/forgot-password.html
@@ -37,7 +37,7 @@
                             <div class="form-group form-focus">
                                 
                                 <label class="control-label">Enter Your Email Address</label>
-                                <input class="form-control floating" type="text" name="email">
+                                <input class="form-control floating" type="text" name="email" required>
                             </div>
                             <div class="form-group text-center">
                                 <button class="btn btn-primary btn-block account-btn" type="submit">Reset Password</button>
