--- a/templates/company.html
+++ b/templates/company.html
@@ -150,12 +150,12 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <div class="modal-content modal-md">
                     <div class="modal-header">
-                        <h4 class="modal-title">Edit Department</h4>
+                        <h4 class="modal-title">Edit Comoa</h4>
                     </div>
                     <div class="modal-body">
                         <form>
                             <div class="form-group">
-                                <label>Department Name <span class="text-danger">*</span></label>
+                                <label>Comapny Name <span class="text-danger">*</span></label>
                                 <input class="form-control" value="IT Management" type="text">
                             </div>
                             <div class="m-t-20 text-center">
