--- a/templates/settings.html
+++ b/templates/settings.html
@@ -6,19 +6,24 @@
             <div class="content container-fluid">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <form>
+                        <form method="post">
+                            {% csrf_token %}
+                            {% include 'messages.html' %}
+
                             <h3 class="page-title">Company Settings</h3>
                             <div class="row">
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label>Company Name <span class="text-danger">*</span></label>
-                                        <input class="form-control" type="text" value="Preadmin">
+                                        <input class="form-control" type="text" placeholder="Gorgian Ltd" value={{company.company_name}} name="company_name" required>
                                     </div>
                                 </div>
+                               
+                                
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label>Contact Person</label>
-                                        <input class="form-control " value="Daniel Porter" type="text">
+                                        <input class="form-control " placeholder="John May" type="text" value={{company.contact_person}} required name="contact_person">
                                     </div>
                                 </div>
                             </div>
@@ -26,38 +31,43 @@
                                 <div class="col-sm-12">
                                     <div class="form-group">
                                         <label>Address</label>
-                                        <input class="form-control " value="3864 Quiet Valley Lane, Sherman Oaks, CA, 91403" type="text">
+                                        <input class="form-control " placeholder="3864 Quiet Valley Lane, Sherman Oaks, CA, 91403"  value={{company.address}} type="text" name="address" required>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-md-6 col-lg-3">
                                     <div class="form-group">
                                         <label>Country</label>
-                                        <select class="form-control select">
-                                            <option>USA</option>
-                                            <option>United Kingdom</option>
+                                        <select class="form-control select" value={{company.country}}  name="country" required>
+                                            <option>Kenya</option>
+                                            <option>Uganda</option>
+                                             <option>Tanzania</option>
+                                            <option>Naigeria</option>
                                         </select>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-md-6 col-lg-3">
                                     <div class="form-group">
                                         <label>City</label>
-                                        <input class="form-control" value="Sherman Oaks" type="text">
+                                        <input class="form-control" placeholder="Nairobi" value={{company.city}} type="text" name="city" required>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-md-6 col-lg-3">
                                     <div class="form-group">
-                                        <label>State/Province</label>
-                                        <select class="form-control select">
-                                            <option>California</option>
-                                            <option>Alaska</option>
-                                            <option>Alabama</option>
+                                        <label>Town</label>
+                                        <select class="form-control select" value={{company.town}} name="town" required>
+                                            <option>Juja</option>
+                                            <option>Nairobi</option>
+                                            <option>Kiambu</option>
+                                            <option>Thika</option>
+                                            <option>Migori</option>
+                                            <option>Mombasa</option>
                                         </select>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-md-6 col-lg-3">
                                     <div class="form-group">
                                         <label>Postal Code</label>
-                                        <input class="form-control" value="91403" type="text">
+                                        <input class="form-control" placeholder="91403" value={{company.postal_code}} type="text" name="postal_code" required>
                                     </div>
                                 </div>
                             </div>
@@ -65,13 +75,13 @@
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label>Email</label>
-                                        <input class="form-control" value="danielporter@example.com" type="email">
+                                        <input class="form-control" placeholder="danielporter@example.com" value={{company.company_email}} type="email" name="company_email" required>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label>Phone Number</label>
-                                        <input class="form-control" value="818-978-7102" type="text">
+                                        <input class="form-control" placeholder="818-978-7102"  value={{company.phone_number}} type="text" name="phone_number" required>
                                     </div>
                                 </div>
                             </div>
@@ -79,13 +89,13 @@
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label>Mobile Number</label>
-                                        <input class="form-control" value="818-635-5579" type="text">
+                                        <input class="form-control" placeholder="818-635-5579" type="text" value={{company.office_number}} name="office_number" required>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label>Fax</label>
-                                        <input class="form-control" value="818-978-7102" type="text">
+                                        <input class="form-control" placeholder="818-978-7102" value={{company.fax}} type="text" name="fax" required>
                                     </div>
                                 </div>
                             </div>
@@ -93,13 +103,20 @@
                                 <div class="col-sm-12">
                                     <div class="form-group">
                                         <label>Website Url</label>
-                                        <input class="form-control" value="https://www.example.com" type="text">
+                                        <input class="form-control" placeholder="https://www.example.com" value={{company.website_url}} type="text" name="website_url" required>
                                     </div>
                                 </div>
                             </div>
+                            <div class="form-group">
+                                    <label>Company Description</label>
+                                    
+                                    <div class="col-lg-10">
+                                        <textarea rows="5" cols="5" class="form-control" placeholder="Enter description here" value={{company.description}} name="description" required></textarea>
+                                    </div>
+                                </div>
                             <div class="row">
                                 <div class="col-sm-12 text-center m-t-20">
-                                    <button type="button" class="btn btn-primary btn-lg">Save &amp; update</button>
+                                    <button type="submit" class="btn btn-primary btn-lg">Save &amp; update</button>
                                 </div>
                             </div>
                         </form>
