--- a/templates/departments.html
+++ b/templates/departments.html
@@ -2,6 +2,7 @@
 {% block content %}
 {% load static %}
         <div class="page-wrapper">
+            {% include 'messages.html' %}
             <div class="content container-fluid">
                 <div class="row">
                     <div class="col-xs-5">
@@ -36,71 +37,7 @@
                                             </div>
                                         </td>
                                     </tr>
-                                    <tr>
-                                        <td>2</td>
-                                        <td>Application Development</td>
-                                        <td class="text-right">
-                                            <div class="dropdown">
-                                                <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
-                                                <ul class="dropdown-menu pull-right">
-                                                    <li><a href="#" data-toggle="modal" data-target="#edit_department" title="Edit"><i class="fa fa-pencil m-r-5"></i> Edit</a></li>
-                                                    <li><a href="#" data-toggle="modal" data-target="#delete_department" title="Delete"><i class="fa fa-trash-o m-r-5"></i> Delete</a></li>
-                                                </ul>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>3</td>
-                                        <td>IT Management</td>
-                                        <td class="text-right">
-                                            <div class="dropdown">
-                                                <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
-                                                <ul class="dropdown-menu pull-right">
-                                                    <li><a href="#" data-toggle="modal" data-target="#edit_department" title="Edit"><i class="fa fa-pencil m-r-5"></i> Edit</a></li>
-                                                    <li><a href="#" data-toggle="modal" data-target="#delete_department" title="Delete"><i class="fa fa-trash-o m-r-5"></i> Delete</a></li>
-                                                </ul>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>4</td>
-                                        <td>Accounts Management</td>
-                                        <td class="text-right">
-                                            <div class="dropdown">
-                                                <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
-                                                <ul class="dropdown-menu pull-right">
-                                                    <li><a href="#" data-toggle="modal" data-target="#edit_department" title="Edit"><i class="fa fa-pencil m-r-5"></i> Edit</a></li>
-                                                    <li><a href="#" data-toggle="modal" data-target="#delete_department" title="Delete"><i class="fa fa-trash-o m-r-5"></i> Delete</a></li>
-                                                </ul>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>5</td>
-                                        <td>Support Management</td>
-                                        <td class="text-right">
-                                            <div class="dropdown">
-                                                <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
-                                                <ul class="dropdown-menu pull-right">
-                                                    <li><a href="#" data-toggle="modal" data-target="#edit_department" title="Edit"><i class="fa fa-pencil m-r-5"></i> Edit</a></li>
-                                                    <li><a href="#" data-toggle="modal" data-target="#delete_department" title="Delete"><i class="fa fa-trash-o m-r-5"></i> Delete</a></li>
-                                                </ul>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>6</td>
-                                        <td>Marketing</td>
-                                        <td class="text-right">
-                                            <div class="dropdown">
-                                                <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
-                                                <ul class="dropdown-menu pull-right">
-                                                    <li><a href="#" data-toggle="modal" data-target="#edit_department" title="Edit"><i class="fa fa-pencil m-r-5"></i> Edit</a></li>
-                                                    <li><a href="#" data-toggle="modal" data-target="#delete_department" title="Delete"><i class="fa fa-trash-o m-r-5"></i> Delete</a></li>
-                                                </ul>
-                                            </div>
-                                        </td>
-                                    </tr>
+                                    
                                 </tbody>
                             </table>
                         </div>
@@ -132,13 +69,40 @@
                         <h4 class="modal-title">Add Department</h4>
                     </div>
                     <div class="modal-body">
-                        <form>
+                        <form method="post" action="{% url 'departments' %}">
+                            {% csrf_token %}
+                          
+                                <div class="form-group">
+                                    <label>Select Company</label>
+                                    <select class="form-control select" name="company" required>
+                                        {% for com in company %}
+                                        <option>{{com.company_name}}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
                             <div class="form-group">
                                 <label>Department Name <span class="text-danger">*</span></label>
-                                <input class="form-control" required="" type="text">
+                                <input class="form-control" required name="department_name" placeholder="It department" type="text">
                             </div>
+                             <div class="form-group">
+                                <label>Number of Employees <span class="text-danger">*</span></label>
+                                <input class="form-control" required placeholder="12" name="number_of_employees" type="text">
+                            </div>
+                             <div class="form-group">
+                                <label>Minimum Salary (Kes)<span class="text-danger">*</span></label>
+                                <input class="form-control" required placeholder="45000" name="minimum_salary" type="text">
+                            </div>
+                             <div class="form-group">
+                                <label>Maximum Salary (Kes)<span class="text-danger">*</span></label>
+                                <input class="form-control" required placeholder="78000" name="maximum_salary" type="text">
+                            </div>
+                             <div class="form-group">
+                                <label> Overtime Rates (Kes)<span class="text-danger">*</span></label>
+                                <input class="form-control" required placeholder="200" name="overtime_pay_perhour" type="text">
+                            </div>
+
                             <div class="m-t-20 text-center">
-                                <button class="btn btn-primary btn-lg">Create Department</button>
+                                <button class="btn btn-primary btn-lg" type="submit">Create Department</button>
                             </div>
                         </form>
                     </div>
