doing the overtime

--- a/templates/employees.html
+++ b/templates/employees.html
@@ -15,6 +15,7 @@
                         </div>
                     </div>
                 </div>
+                {% include "messages.html" %}
                 
                 <div class="row staff-grid-row">
                     {% for emp in employees %}
