aded the Procfile, and requirements.txt files for heroku deployment

--- a/templates/coming-soon.html
+++ b/templates/coming-soon.html
@@ -31,8 +31,12 @@
                     <p class="sub-title">Welcome To Employee Overtime-Working Management System <br/>
                         Your Account has been Createsd Successifully.</p>
                 </div>
-                
-                   <h5 style="text-align:center; color:orangered">Pleace Check your email to Verify your Account first! Thank You.</h5>
+                <h5>Preceed To login </h5>
+                   <div class="form-group text-center">
+                       <a href="{% url 'login' %}">
+                                <button class="btn btn-primary btn-block account-btn" type="button">Login</button>
+                       </a>
+                            </div>
                     
                 </div>
                 
