Ready to deploy to Heroku

--- a/templates/register.html
+++ b/templates/register.html
@@ -39,7 +39,7 @@
                                 <div class="form-group">
                                     <label>Register As : </label>
                                     <select class="select" name="user_type" required>
-                                        <option>Select Account</option>
+                                         <option value="Hr"  >Hr</option>
                                         <option value="Hr"  >Hr</option>
                                         <option value="Employee">Employee</option>
                                         
